--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             </div>
           </div>
         </div>
-        <p>Hi! Welcome to my digital cookbook, which I regularly update with my tried-and-true all-time favorite recipes. Hope you enjoy.</p>
+        <p>Hi! Welcome to my digital cookbook, which I regularly update with my tried-and-true, all-time favorite recipes. Hope you enjoy.</p>
         <div class="tstbite-social my-4 my-md-0">
           <a href="https://www.instagram.com/nyctreats/">
             <svg data-name="feather-icon/instagram" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
