--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
       <div class="bg-lightest-gray media-box mt-4 mb-md-4">
         <div class="media mb-4">
           <div class="d-flex align-items-center flex-wrap">
-            <img class="me-3" src="assets/images/logos/aboutme.jpeg" alt="Avatar">
+            <img class="me-3" src="assets/images/logos/aboutme.png" alt="Avatar">
             <div class="media-body">
               <h5 class="f-size-24 inter-font font-weight-semibold">Emily L.</h5>
               <span>Recipe Curator</span>
