--- a/elements.html
+++ b/elements.html
@@ -1740,6 +1740,27 @@
             </div>
           </div>
         </div>
+        <div class="col-lg-5 col-md-6">
+          <div class="card rounded-6 overflow-hidden border-0 bg-secondary mt-0 mt-md-4">
+            <img src="assets/images/menus/menu1.jpg" class="w-100" alt="Menu">
+            <div class="px-4 py-4 d-flex flex-column justify-content-center h-100 position-relative">
+              <strong>
+                <svg data-name="feather-icon/trending-up" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                  <rect data-name="Bounding Box" width="20" height="20" fill="rgba(255,255,255,0)"></rect>
+                  <path d="M.244,11.423a.834.834,0,0,1,0-1.178L6.494,3.994a.834.834,0,0,1,1.178,0L11.25,7.571l5.9-5.9H14.167a.833.833,0,1,1,0-1.667h5A.833.833,0,0,1,20,.833v5a.834.834,0,0,1-1.667,0V2.845L11.839,9.339a.834.834,0,0,1-1.179,0L7.083,5.761l-5.66,5.661a.834.834,0,0,1-1.179,0Z" transform="translate(0 4.167)" fill="#ff642f"></path>
+                </svg>
+                <span class="ms-2 caption font-weight-medium">85% would make this again</span>
+              </strong>
+              <h5 class="my-3">Mighty Super Cheesecake</h5>
+              <p class="big pb-5">Look no further for a creamy and ultra smooth classic cheesecake recipe! no one can deny its simple decadence.</p>
+              <a href="#0" class="circle circle-lg tstbite-arrow">
+                <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="13.333" viewBox="0 0 13.333 13.333">
+                  <path d="M6.077,13.089a.833.833,0,0,1,0-1.178L10.488,7.5H.833a.833.833,0,0,1,0-1.667h9.655L6.077,1.423A.834.834,0,0,1,7.256.244l5.829,5.83a.833.833,0,0,1,0,1.186L7.256,13.089a.834.834,0,0,1-1.179,0Z" fill="#ff642f"></path>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="row mt-md-5">
         <div class="col-lg-8">
