--- a/index.html
+++ b/index.html
@@ -15,6 +15,58 @@
         <a class="navbar-brand" href="https://emuhly.com">
           <img src="assets/images/logos/emuhly.png" style="max-width: 125px;" >
         </a>
+        <div class="collapse navbar-collapse" id="menu-4">
+          <ul class="navbar-nav m-auto pt-3 pt-lg-0">
+            <li class="nav-item dropdown">
+              <a class="nav-link" href="#" role="button" id="HomePage" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span>Home Page</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="9.333" height="5.333" viewBox="0 0 9.333 5.333">
+                  <path d="M1.138.2A.667.667,0,0,0,.2,1.138l4,4a.667.667,0,0,0,.943,0l4-4A.667.667,0,1,0,8.2.2L4.667,3.724Z"/>
+                </svg>
+              </a>
+              <div class="dropdown-menu" aria-labelledby="HomePage">
+                <a class="dropdown-item" href="index.html">Home V1</a>
+                <a class="dropdown-item" href="home-v2.html">Home V2</a>
+                <a class="dropdown-item" href="home-v3.html">Home V3</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link" href="#" role="button" id="RecipePage" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span>Recipe Page</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="9.333" height="5.333" viewBox="0 0 9.333 5.333">
+                  <path d="M1.138.2A.667.667,0,0,0,.2,1.138l4,4a.667.667,0,0,0,.943,0l4-4A.667.667,0,1,0,8.2.2L4.667,3.724Z"/>
+                </svg>
+              </a>
+              <div class="dropdown-menu" aria-labelledby="RecipePage">
+                <a class="dropdown-item" href="recipe-full-width.html">Full Width</a>
+                <a class="dropdown-item" href="recipe-sidebar.html">Sidebar</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link" href="#" role="button" id="Pages" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span>Pages</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="9.333" height="5.333" viewBox="0 0 9.333 5.333">
+                  <path d="M1.138.2A.667.667,0,0,0,.2,1.138l4,4a.667.667,0,0,0,.943,0l4-4A.667.667,0,1,0,8.2.2L4.667,3.724Z"/>
+                </svg>
+              </a>
+              <div class="dropdown-menu" aria-labelledby="Pages">
+                <a class="dropdown-item" href="category.html">Category</a>
+                <a class="dropdown-item" href="archive.html">Archive</a>
+                <a class="dropdown-item" href="favorites.html">Favorites</a>
+                <a class="dropdown-item" href="profile.html">Profile</a>
+                <a class="dropdown-item" href="about.html">About</a>
+                <a class="dropdown-item" href="blog.html">Blog Page</a>
+                <a class="dropdown-item" href="search-result.html">Search Results</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="elements.html">Elements</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://fabrx.co/tastebite-food-recipes-website-template/" target="_blank">Buy</a>
+              </li>
+          </ul>
+        </div>
         <div class="tstbite-header-links d-flex align-items-center ms-auto order-0 order-lg-2">
           <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/logos/icon.png" alt="Avatar"></a>
         </div>
