--- a/index.html
+++ b/index.html
@@ -17,18 +17,8 @@
         </a>
         <div class="collapse navbar-collapse" id="menu-4">
           <ul class="navbar-nav m-auto pt-3 pt-lg-0">
-            <li class="nav-item dropdown">
-              <a class="nav-link" href="#" role="button" id="HomePage" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span>Home Page</span>
-                <svg xmlns="http://www.w3.org/2000/svg" width="9.333" height="5.333" viewBox="0 0 9.333 5.333">
-                  <path d="M1.138.2A.667.667,0,0,0,.2,1.138l4,4a.667.667,0,0,0,.943,0l4-4A.667.667,0,1,0,8.2.2L4.667,3.724Z"/>
-                </svg>
-              </a>
-              <div class="dropdown-menu" aria-labelledby="HomePage">
-                <a class="dropdown-item" href="index.html">Home V1</a>
-                <a class="dropdown-item" href="home-v2.html">Home V2</a>
-                <a class="dropdown-item" href="home-v3.html">Home V3</a>
-              </div>
+            <li class="nav-item">
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link" href="#" role="button" id="RecipePage" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
