--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="menu-4">
           <ul class="navbar-nav m-auto pt-3 pt-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="/">Home</a>
+              <a class="nav-link" href="/">HOME</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link" href="#" role="button" id="RecipePage" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -39,7 +39,7 @@
                   <path d="M1.138.2A.667.667,0,0,0,.2,1.138l4,4a.667.667,0,0,0,.943,0l4-4A.667.667,0,1,0,8.2.2L4.667,3.724Z"/>
                 </svg>
               </a>
-              <div class="dropdown-menu" aria-labelledby="Pages">
+              <div class="dropdown-menu" aria-labelledby="RECIPES">
                 <a class="dropdown-item" href="category.html">Category</a>
                 <a class="dropdown-item" href="archive.html">Archive</a>
                 <a class="dropdown-item" href="favorites.html">Favorites</a>
@@ -50,10 +50,10 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="elements.html">Elements</a>
+              <a class="nav-link" href="elements.html">MOST POPULAR</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://fabrx.co/tastebite-food-recipes-website-template/" target="_blank">Buy</a>
+              <a class="nav-link" href="https://fabrx.co/tastebite-food-recipes-website-template/" target="_blank">FAVE</a>
               </li>
           </ul>
         </div>
