--- a/index.html
+++ b/index.html
@@ -40,20 +40,19 @@
                 </svg>
               </a>
               <div class="dropdown-menu" aria-labelledby="Pages">
-                <a class="dropdown-item" href="category.html">Category</a>
-                <a class="dropdown-item" href="archive.html">Archive</a>
-                <a class="dropdown-item" href="favorites.html">Favorites</a>
-                <a class="dropdown-item" href="profile.html">Profile</a>
-                <a class="dropdown-item" href="about.html">About</a>
-                <a class="dropdown-item" href="blog.html">Blog Page</a>
-                <a class="dropdown-item" href="search-result.html">Search Results</a>
+                <a class="dropdown-item" href="category.html">Bars</a>
+                <a class="dropdown-item" href="archive.html">Breads</a>
+                <a class="dropdown-item" href="favorites.html">Cookies</a>
+                <a class="dropdown-item" href="profile.html">GF, DF, V<sup>*</sup></a>
+                <a class="dropdown-item" href="about.html">Healthier Desserts</a>
+                <a class="dropdown-item" href="blog.html">Other</a>
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="elements.html">MOST POPULAR</a>
+              <a class="nav-link" href="/popularrecipes">MOST POPULAR</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://fabrx.co/tastebite-food-recipes-website-template/" target="_blank">FAVES</a>
+              <a class="nav-link" href="/faves" target="_blank">FAVES</a>
               </li>
           </ul>
         </div>
