--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 </svg>
               </a>
               <div class="dropdown-menu" aria-labelledby="RecipePage">
-                <a class="dropdown-item" href="recipe-full-width.html">Savory</a>
-                <a class="dropdown-item" href="recipe-sidebar.html">Sweet</a>
+                <a class="dropdown-item" href="/savory">Savory</a>
+                <a class="dropdown-item" href="/sweet">Sweet</a>
               </div>
             </li>
             <li class="nav-item dropdown">
