--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               <img src="assets/images/food/savoryicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/gfdfv" class="tstbite-category-title">GF, DF, V</a>
+              <a href="/gfdfv" class="tstbite-category-title">GF, DF, V<sup>*</sup></a>
             </figcaption>
           </figure>
         </div>
