--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a class="dropdown-item" href="category.html">Bars</a>
                 <a class="dropdown-item" href="archive.html">Breads</a>
                 <a class="dropdown-item" href="favorites.html">Cookies</a>
-                <a class="dropdown-item" href="profile.html">GF, DF, V<sup>*</sup></a>
+                <a class="dropdown-item" href="profile.html">GF, DF, V</a>
                 <a class="dropdown-item" href="about.html">Healthier Desserts</a>
                 <a class="dropdown-item" href="blog.html">Other</a>
               </div>
@@ -152,7 +152,7 @@
               <img src="assets/images/food/savoryicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/gfdfv" class="tstbite-category-title">GF, DF, V<sup>*</sup></a>
+              <a href="/gfdfv" class="tstbite-category-title">GF, DF, V</a>
             </figcaption>
           </figure>
         </div>
