--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                 </svg>
               </a>
               <div class="dropdown-menu" aria-labelledby="Pages">
-                <a class="dropdown-item" href="category.html">Bars</a>
-                <a class="dropdown-item" href="archive.html">Breads</a>
-                <a class="dropdown-item" href="favorites.html">Cookies</a>
-                <a class="dropdown-item" href="profile.html">GF, DF, V</a>
-                <a class="dropdown-item" href="about.html">Healthier Desserts</a>
-                <a class="dropdown-item" href="blog.html">Other</a>
+                <a class="dropdown-item" href="/bars">Bars</a>
+                <a class="dropdown-item" href="/breads">Breads</a>
+                <a class="dropdown-item" href="/cookies">Cookies</a>
+                <a class="dropdown-item" href="/gfdfv">GF, DF, V</a>
+                <a class="dropdown-item" href="/healthierdesserts">Healthier Desserts</a>
+                <a class="dropdown-item" href="/other">Other</a>
               </div>
             </li>
             <li class="nav-item">
