--- a/faves.html
+++ b/faves.html
@@ -101,6 +101,31 @@
         </div>
       </div>
     </div>
+    <div class="card rounded-16 overflow-hidden border-0 bg-secondary mt-0 mt-md-4">
+      <div class="row g-0">
+        <div class="col-lg-7">
+          <img src="assets/images/food/volcanosalmon.jpg" class="w-100" >
+        </div>
+        <div class="col-lg-5">
+          <div class="p-4 p-md-5 d-flex flex-column justify-content-center h-100 position-relative">
+            <strong>
+              <svg data-name="feather-icon/trending-up" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                <rect data-name="Bounding Box" width="20" height="20" fill="rgba(255,255,255,0)"/>
+                <path d="M.244,11.423a.834.834,0,0,1,0-1.178L6.494,3.994a.834.834,0,0,1,1.178,0L11.25,7.571l5.9-5.9H14.167a.833.833,0,1,1,0-1.667h5A.833.833,0,0,1,20,.833v5a.834.834,0,0,1-1.667,0V2.845L11.839,9.339a.834.834,0,0,1-1.179,0L7.083,5.761l-5.66,5.661a.834.834,0,0,1-1.179,0Z" transform="translate(0 4.167)" fill="#ff642f"/>
+              </svg>
+              <span class="ms-2 caption font-weight-medium">100% would make this again</span>
+            </strong>
+            <h4 class="my-3">Volcano Salmon</h4>
+            <p class="big pe-0 pe-md-5 pb-3 pb-sm-5 pb-lg-0">Perfectly baked salmon topped with a sweet, spicy sauce makes the most delicious dish.</p>
+            <a href="/butterbars" class="circle circle-lg tstbite-arrow">
+              <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="13.333" viewBox="0 0 13.333 13.333">
+                <path d="M6.077,13.089a.833.833,0,0,1,0-1.178L10.488,7.5H.833a.833.833,0,0,1,0-1.667h9.655L6.077,1.423A.834.834,0,0,1,7.256.244l5.829,5.83a.833.833,0,0,1,0,1.186L7.256,13.089a.834.834,0,0,1-1.179,0Z" fill="#ff642f"/>
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
   </div>
