--- a/gfdfv.html
+++ b/gfdfv.html
@@ -52,11 +52,11 @@
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/comingsoon" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Kimchi Fried Rice">
+            <a href="/kimchifriedrice" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/kimchifriedrice.jpg" class="w-100" alt="Kimchi Fried Rice">
             </a>
             <figcaption class="mt-2">
-              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Kimchi Fried Rice</a>
+              <a href="/kimchifriedrice" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Kimchi Fried Rice</a>
             </figcaption>
           </figure>
         </div>
