--- a/kimchifriedrice.html
+++ b/kimchifriedrice.html
@@ -13,10 +13,10 @@
     <header class="tstbite-header bg-white">
       <nav class="navbar navbar-expand-lg has-header-inner px-0">
         <a class="navbar-brand" href="https://emuhly.com">
-          <img src="assets/images/logos/emuhly.png" style="max-width: 125px;">
+          <img src="assets/images/logos/emuhly.png" style="max-width: 125px;" >
         </a>
         <div class="tstbite-header-links d-flex align-items-center ms-auto order-0 order-lg-2">
-          <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/logos/icon.png"></a>
+          <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/logos/icon.png" alt="Avatar"></a>
         </div>
         <button class="navbar-toggler pe-0 ms-2 ms-md-3" type="button" data-bs-toggle="collapse" data-bs-target="#menu-4" aria-controls="menu-4" aria-expanded="false" aria-label="Toggle navigation">
           <svg data-name="Icon/Hamburger" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -40,24 +40,24 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Volcano Salmon</h5>
+          <h5 class="py-3 mb-0 h2">Kimchi Fried Rice</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <small class="ps-1">Author: Moribyan</small>
+          <small class="ps-1">Author: The Big Man's World</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
             <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
           </svg>
-          <small>June 24th, 2023</small>
+          <small>June 25th, 2023</small>
         </div>
       </div>
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/volcanosalmon.jpg" class="w-100" >
+          <img src="assets/images/food/brownies.png" class="w-100" >
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -69,14 +69,14 @@
               </li>
               <li>
                 <small>Cook Time</small>
-                <span>20 minutes</span>
+                <span>10 minutes</span>
               </li>
               <li>
                 <small>Total Time</small>
-                <span>30 minutes</span>
+                <span>20 minutes</span>
               </li>
               <li>
-                <small>Servings</small>
+                <small>Serving</small>
                 <span>2
                 </span>
               </li>
@@ -86,61 +86,61 @@
             <div class="mt-4 mt-md-5">
               <h6>Ingredients</h6>
               <div class="checklist pb-2">
-                <strong>Volcano Sauce</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1/2 cup coconut sugar</label>
+                  <label class="form-check-label" for="crackers">1 cup short-grain white rice</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/3 cup buffalo sauce</label>
+                  <label class="form-check-label" for="unsalted">1/8-1/4 cup EVOO</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tablespoon sriracha</label>
+                  <label class="form-check-label" for="unsalted">2-3 tablespoons chicken bone broth</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1 tablespoon finely minced garlic</label>
+                  <label class="form-check-label" for="crackers">1 tablespoon finely minced garlic (substitute garlic powder)</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                    <input type="checkbox"  class="form-check-input">
+                    <label class="form-check-label" for="crackers">1/2 tablespoon fresh ginger</label>
+                  </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1/4 teaspoon onion powder</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1 tablespoon raw honey</label>
+                  <label class="form-check-label" for="unsalted">1/4 teaspoon cracked black pepper</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1 to 2 tablespoons EVOO or unsalted butter</label>
+                  <label class="form-check-label" for="unsalted">Scallions to taste</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1/2 to 1 teaspoon red pepper flakes to taste</label>
+                  <label class="form-check-label" for="unsalted">Freshly grated carrots to taste</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1 tablespoon chopped parsley</label>
+                    <input type="checkbox"  class="form-check-input">
+                    <label class="form-check-label" for="unsalted">1/8 teaspoon sesame oil</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1/4 cup green onions</label>
-                </div>
-              </div>
-              <div class="checklist pb-2">
-                <strong>Salmon</strong>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">2 king salmon filets</label>
+                    <input type="checkbox"  class="form-check-input">
+                    <label class="form-check-label" for="unsalted">5 tablespoons kimchi</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">Salt and pepper, to taste</label>
+                    <input type="checkbox"  class="form-check-input">
+                    <label class="form-check-label" for="unsalted">1 chicken breast (optional)</label>
                 </div>
-              </div>
-              <div class="checklist pb-2">
-                <strong>Rice</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 cup short-grain white rice</label>
+                    <input type="checkbox"  class="form-check-input">
+                    <label class="form-check-label" for="unsalted">Sesame seeds to garnish</label>
                 </div>
+                <li>
+                    <i>*Note: Fried rice is definitely a preferential dish - it's all about finding the combination and/or amount of ingredients that suit your palate best! Feel free to play around with these ingredients and the amounts of each, as this is a very versatile dish.</i>
+                  </li>
               </div>
             </div>
           </div>
@@ -150,19 +150,36 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 400°F and line a large rimmed baking sheet with parchment paper. Pat dry the salmon filets with a paper towel. Place salmon filets on the baking sheet and into the oven for about 15 minutes (or until an internal temperature of 135°F-140°F).
+                  Grill chicken breast in a pan until finished. Remove chicken from pan and chop into fine pieces, then set aside.
                 </li>
                 <li>
                   <span>2</span>
-                  Over medium heat, add buffalo sauce, brown sugar, rice vinegar, sriracha, minced garlic, and honey to a pot or saucepan. Bring to a simmer to thicken into a glaze. Once it is thick, add the EVOO or butter, red pepper flakes, and parsley. Mix to combine and then take off the heat. Add the green onions last, then transfer the mixture to a large bowl. Set aside.
+                  Add EVOO shortly after finishing cooking the chicken and allow the pan to heat until mildly hot.
                 </li>
                 <li>
                   <span>3</span>
-                  Take the salmon out of the oven and spoon volcano sauce on each filet. Garnish with green onions and sesame seeds, and serve with white rice.
+                  Add white rice to the pan and distribute evenly through the pan. Ensure there is enough oil in the pan to generously coat all of the rice.
                 </li>
                 <li>
-                  <i>*Note: Salmon can be substituted with chicken or shrimp!</i>
+                  <span>4</span>
+                  Add chicken bone broth slowly and continue mixing rice until broth integrates with the rice.
                 </li>
+                <li>
+                <span>5</span>
+                Take the pan off of the heat and add onion poweder, cracked black pepper, and garlic powder (if using).
+                </li>
+                <li>
+                <span>6</span>
+                Place the pan back on heat, push rice to one side of the pan, and add carrots, scallions, fresh garlic, and fresh ginger to the empty side. Let the vegetables, garlic, and ginger cook for about 15-20 seconds before incorporating with the rice. 
+                </li>
+                <li>
+                    <span>7</span>
+                    Take the pan back off of the heat and add chicken and sesame oil, then mix.
+                    </li>
+                    <li>
+                        <span>8</span>
+                        Lastly, add the kimchi and mix well. Garnish with sesame seeds.
+                        </li>
               </ul>
             </div>
           </div>
