--- a/gfdfv.html
+++ b/gfdfv.html
@@ -97,7 +97,7 @@
           <div class="col-md-4">
             <figure class="my-3 tstbite-card">
               <a href="/comingsoon" class="tstbite-animation rounded-6">
-                <img src="assets/images/food/harissameatballs.jpg" class="w-100" alt="Harissa Meatballs">
+                <img src="assets/images/food/harissameatballs.png" class="w-100" alt="Harissa Meatballs">
               </a>
               <figcaption class="mt-2">
                 <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Harissa Meatballs</a>
