--- a/gfdfv.html
+++ b/gfdfv.html
@@ -43,7 +43,7 @@
          <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/comingsoon" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Soy Ginger Chilean Sea Bass">
+              <img src="assets/images/food/chileanseabass.jpeg" class="w-100" alt="Soy Ginger Chilean Sea Bass">
             </a>
             <figcaption class="mt-2">
               <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">'Soy' Ginger Chilean Sea Bass</a>
