--- a/gfdfv.html
+++ b/gfdfv.html
@@ -75,7 +75,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/comingsoon" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Fine Herb Dressing">
+              <img src="assets/images/food/fineherbdressing.jpg" class="w-100" alt="Fine Herb Dressing">
             </a>
             <figcaption class="mt-2">
               <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fine Herb Dressing</a>
