--- a/gfdfv.html
+++ b/gfdfv.html
@@ -28,7 +28,7 @@
 
     <section class="tstbite-components my-4 my-md-5">
       <h5 class="py-3 mb-0">Gluten Free, Dairy Free, & Vegan<sup>*</sup> (+ Refined Sugar Free!)</h5>
-      <div>*Note: 'Vegan' in my diet means no eggs. I still consume animal products.</div>
+      <div>*Note: 'Vegan' in my diet means no eggs. I still consume other animal products.</div>
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
