--- a/kimchifriedrice.html
+++ b/kimchifriedrice.html
@@ -178,7 +178,7 @@
                         Lastly, add the kimchi and mix well. Garnish with sesame seeds.
                         </li>
                     <li>
-                        <i>*Note: Fried rice is definitely a preferential dish - it's all about finding the combination and/or amount of ingredients that suit your palate best! Feel free to play around with these ingredients and the amounts of each, as this is a very versatile dish.</i>
+                        <i>*Note: Fried rice is definitely a versatile dish - it's all about finding the combination and/or amount of ingredients that suit your palate best! Feel free to play around with these ingredients and the amounts of each.</i>
                         </li>
               </ul>
             </div>
