--- a/fineherbdressing.html
+++ b/fineherbdressing.html
@@ -80,23 +80,59 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="marshmallows" name="marshmallows" class="form-check-input">
-                  <label class="form-check-label" for="marshmallows">4 tablespoons butter, softened</label>
+                  <label class="form-check-label" for="marshmallows">2 cups raw honey</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="melted" name="melted" class="form-check-input">
-                  <label class="form-check-label" for="melted">3 ounces cream cheese</label>
+                  <label class="form-check-label" for="melted">4 cups dijon mustard</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="Philadelphia" name="Philadelphia" class="form-check-input">
-                  <label class="form-check-label" for="Philadelphia">1 1/2 cups powdered sugar</label>
+                  <label class="form-check-label" for="Philadelphia">2 cups roasted garlic</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="thickened" name="thickened" class="form-check-input">
-                  <label class="form-check-label" for="thickened">2 tablespoons half-and-half (sub 1 tablespoon whole milk and 1 tablespoon heavy cream)</label>
+                  <label class="form-check-label" for="thickened">2 cups roasted shallot</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="tablespoonpowdered" name="tablespoonpowdered" class="form-check-input">
-                  <label class="form-check-label" for="tablespoonpowdered">1/2 teaspoon vanilla extract</label>
+                  <label class="form-check-label" for="tablespoonpowdered">1 cup freshly minced garlic</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="tablespoonpowdered" name="tablespoonpowdered" class="form-check-input">
+                  <label class="form-check-label" for="tablespoonpowdered">1 pound basil</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="tablespoonpowdered" name="tablespoonpowdered" class="form-check-input">
+                  <label class="form-check-label" for="tablespoonpowdered">4 bunches chopped cilantro</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="tablespoonpowdered" name="tablespoonpowdered" class="form-check-input">
+                  <label class="form-check-label" for="tablespoonpowdered">1/2 cup chopped fresh oregano</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="tablespoonpowdered" name="tablespoonpowdered" class="form-check-input">
+                  <label class="form-check-label" for="tablespoonpowdered">10 stalks chopped fresh rosemary</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="tablespoonpowdered" name="tablespoonpowdered" class="form-check-input">
+                  <label class="form-check-label" for="tablespoonpowdered">5 cups ACV</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="tablespoonpowdered" name="tablespoonpowdered" class="form-check-input">
+                  <label class="form-check-label" for="tablespoonpowdered">3 cups apple juice (optional)</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="tablespoonpowdered" name="tablespoonpowdered" class="form-check-input">
+                  <label class="form-check-label" for="tablespoonpowdered">8 cups EVOO</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="tablespoonpowdered" name="tablespoonpowdered" class="form-check-input">
+                  <label class="form-check-label" for="tablespoonpowdered">1 pound spinach</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="tablespoonpowdered" name="tablespoonpowdered" class="form-check-input">
+                  <label class="form-check-label" for="tablespoonpowdered">Salt and pepper to taste</label>
                 </div>
               </div>
             </div>
@@ -107,15 +143,11 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Beat the butter and cream cheese in a medium bowl with an electric mixer until blended.
+                  Place all ingredients in a blender.
                 </li>
                 <li>
                   <span>2</span>
-                  Add powdered sugar, half-and-half, and vanilla extract, and beat until smooth.
-                </li>
-                <li>
-                  <span>3</span>
-                  Frost cake, cupcakes, or cinnamon rolls as desired.
+                  Add 4 cups of EVOO first, blend, then slowly add the remaining cups of EVOO.
                 </li>
               </ul>
             </div>
