--- a/gfdfv.html
+++ b/gfdfv.html
@@ -74,11 +74,11 @@
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/comingsoon" class="tstbite-animation rounded-6">
+            <a href="/fineherbdressing" class="tstbite-animation rounded-6">
               <img src="assets/images/food/fineherbdressing.jpg" class="w-100" alt="Fine Herb Dressing">
             </a>
             <figcaption class="mt-2">
-              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fine Herb Dressing</a>
+              <a href="/fineherbdressing" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fine Herb Dressing</a>
             </figcaption>
           </figure>
         </div>
