--- a/fineherbdressing.html
+++ b/fineherbdressing.html
@@ -147,7 +147,7 @@
                 </li>
                 <li>
                   <span>2</span>
-                  Add 4 cups of EVOO first, blend, then slowly add the remaining cups of EVOO.
+                  Add 4 cups of EVOO, blend until thorougly mixed, then slowly add the remaining cups of EVOO and blend until desired consistency.
                 </li>
               </ul>
             </div>
