--- a/gfdfv.html
+++ b/gfdfv.html
@@ -85,15 +85,25 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/comingsoon" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/gfdinnerrolls.jpg" class="w-100" alt="Dinner Rolls">
+              <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Rosemary Garlic Dressing">
             </a>
             <figcaption class="mt-2">
-              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Dinner Rolls</a>
+              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Rosemary Garlic Dressing</a>
             </figcaption>
           </figure>
         </div>
       </div>
         <div class="row">
+          <div class="col-md-4">
+            <figure class="my-3 tstbite-card">
+              <a href="/comingsoon" class="tstbite-animation rounded-6">
+                <img src="assets/images/food/gfdinnerrolls.jpg" class="w-100" alt="Dinner Rolls">
+              </a>
+              <figcaption class="mt-2">
+                <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Dinner Rolls</a>
+              </figcaption>
+            </figure>
+          </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/comingsoon" class="tstbite-animation rounded-6">
