--- a/gfdfv.html
+++ b/gfdfv.html
@@ -84,11 +84,11 @@
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/comingsoon" class="tstbite-animation rounded-6">
+            <a href="/rosemarygarlicdressing" class="tstbite-animation rounded-6">
               <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Rosemary Garlic Dressing">
             </a>
             <figcaption class="mt-2">
-              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Rosemary Garlic Dressing</a>
+              <a href="/rosemarygarlicdressing" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Rosemary Garlic Dressing</a>
             </figcaption>
           </figure>
         </div>
