--- a/gfdfv.html
+++ b/gfdfv.html
@@ -85,7 +85,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/rosemarygarlicdressing" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Rosemary Garlic Dressing">
+              <img src="assets/images/food/rosemarygarlicdressing.jpg" class="w-100" alt="Rosemary Garlic Dressing">
             </a>
             <figcaption class="mt-2">
               <a href="/rosemarygarlicdressing" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Rosemary Garlic Dressing</a>
