--- a/index.html
+++ b/index.html
@@ -290,7 +290,11 @@
       <div class="bg-lightest-gray media-box mt-4 mb-md-4">
         <div class="media mb-4">
           <div class="d-flex align-items-center flex-wrap">
-            <img class="me-3" src="assets/images/logos/aboutme.png" alt="Avatar">
+            <div class="col-lg-2 col-md-4 col-4">
+              <figure class="my-3 text-center tstbite-card">
+                <img src="assets/images/logos/emilylogo.png" class="rounded-circle" >
+              </figure>
+            </div>
             <div class="media-body">
               <h5 class="f-size-24 inter-font font-weight-semibold">Emily L.</h5>
               <span>Recipe Curator</span>
