--- a/sweet.html
+++ b/sweet.html
@@ -27,57 +27,47 @@
     </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Savory</h5>
+      <h5 class="py-3 mb-0">Sweets</h5>
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/fusilliallavodka" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/fusilliallavodka.png" class="w-100" alt="Fusilli Alla Vodka">
+            <a href="/pumpkincookies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/pumpkincookies.jpg" class="w-100" alt="Pumpkin Cookies">
             </a>
             <figcaption class="mt-2">
-              <a href="/fusilliallavodka" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fusilli Alla Vodka</a>
+              <a href="/pumpkincookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Cookies</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/lettucecups" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/lettucecups.jpg" class="w-100" alt="Lettuce Cups">
+            <a href="/chocolatechipcookies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/chocolatechipcookies.jpg" class="w-100" alt="Chocolate Chip Cookies">
             </a>
             <figcaption class="mt-2">
-              <a href="/lettucecups" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chicken Teriyaki Lettuce Cups</a>
+              <a href="/chocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pudding Chocolate Chip Cookies</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/tofu" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/tofu.jpg" class="w-100" alt="Tofu">
+            <a href="/chocolatechipcookiecake" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/cookiecake.jpg" class="w-100" alt="Chocolate Chip Cookie Cake">
             </a>
             <figcaption class="mt-2">
-              <a href="/tofu" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Crispy Baked Tofu</a>
+              <a href="/chocolatechipcookiecake" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookie Cake</a>
             </figcaption>
           </figure>
         </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4">
-            <figure class="my-3 tstbite-card">
-              <a href="/comingsoon" class="tstbite-animation rounded-6">
-                <img src="assets/images/food/mustardchicken.jpg" class="w-100" alt="Bread Crumb Mustard Chicken">
-              </a>
-              <figcaption class="mt-2">
-                <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Bread Crumb Mustard Chicken</a>
-              </figcaption>
-            </figure>
-          </div>
+      </div>
+      <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/soup" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/chickennoodlesoup.jpg" class="w-100" alt="Lettuce Cups">
+            <a href="/mnmcookies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/mandmcookies.jpg" class="w-100" alt="Mini M&M Chocolate Chip Cookies">
             </a>
             <figcaption class="mt-2">
-              <a href="/soup" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chicken Noodle Soup</a>
+              <a href="/mnmcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Mini M&M Chocolate Chip Cookies</a>
             </figcaption>
           </figure>
         </div>
