--- a/sweet.html
+++ b/sweet.html
@@ -71,6 +71,96 @@
             </figcaption>
           </figure>
         </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/pumpkinbread" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/pumpkinloaf.png" class="w-100" alt="Pumpkin Bread">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/pumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Bread</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/monkeybread" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/monkeybread.jpeg" class="w-100" alt="Monkey Bread Muffins">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Monkey Bread Muffins</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/cinnamonrolls" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/cinnamonrolls.JPG" class="w-100" alt="Cinnamon Rolls">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/cinnamonrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cinnamon Rolls</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/sourcherrystrudel" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/sourcherrystrudel.jpg" class="w-100" alt="Sour Cherry Strudel">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/sourcherrystrudel" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Sour Cherry Strudel</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/baklava" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/baklava.jpeg" class="w-100" alt="Baklava">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/baklava" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Baklava</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/meringues" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/meringues.jpg" class="w-100" alt="Meringues">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/meringues" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Meringues</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/hazelnuttruffles" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/hazelnuttruffles.JPG" class="w-100" alt="Hazelnut Truffles">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/hazelnuttruffles" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Hazelnut Truffles</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/brownies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/brownies.png" class="w-100" alt="Brownies">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/brownies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Brownies</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+      <div class="row">
+
+
+
+        
       </div>
       </div>
     </section>
