--- a/sweet.html
+++ b/sweet.html
@@ -157,10 +157,90 @@
         </div>
       </div>
       <div class="row">
-
-
-
-        
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/comingsoon" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/chocolateavocadocookies.jpg" class="w-100" alt="Chocolate Avocado Cookies">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Avocado Cookies</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/bostoncreamcupcakes" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/bostoncreamcupcakes.png" class="w-100" alt="Boston Cream Cupcakes">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/bostoncreamcupcakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Boston Cream Cupcakes</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/butterbars" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/butterbars.jpg" class="w-100" alt="Butter Bars">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/butterbars" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Gooey Butter Bars</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/creampuffs" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/creampuffsother.jpg" class="w-100" alt="Cream Puffs">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/creampuffs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Puffs</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/crepes" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/palacinke.jpg" class="w-100" alt="Crepes">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/crepes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Crepes</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/pancakes" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/pancakes.jpg" class="w-100" alt="Pancakes">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/pancakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fluffy Pancakes</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/fudgefrosting" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/fudgefrosting.jpg" class="w-100" alt="Fudge Frosting">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/fudgefrosting" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fudge Frosting</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/creamcheesefrosting" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/creamcheesefrosting.jpg" class="w-100" alt="Cream Cheese Frosting">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/creamcheesefrosting" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Cheese Frosting</a>
+            </figcaption>
+          </figure>
+        </div>
       </div>
       </div>
     </section>
