--- a/faves.html
+++ b/faves.html
@@ -168,6 +168,38 @@
       </div>
     </div>
   </div>
+  <h5 class="py-3 mb-0">Favorite Spots</h5>
+      <div class="row">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/restaurants" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/restaurant.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/restaurants" class="tstbite-category-title">Restaurants</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/desserts" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/desserts.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/desserts" class="tstbite-category-title">Desserts</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/bakeries" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/bakeries.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/bakeries" class="tstbite-category-title">Bakeries</a>
+            </figcaption>
+          </figure>
+        </div>
 </section>
   </div>
 
