--- a/faves.html
+++ b/faves.html
@@ -183,7 +183,7 @@
             </strong>
             <h4 class="my-3">Chocolate Avocado Cookies</h4>
             <p class="big pe-0 pe-md-5 pb-3 pb-sm-5 pb-lg-0">I tried these cookies for the first time at Miraval in Tuscon and was blown away. The chef was nice enough to share the recipe with me, and now these are a staple in our house!</p>
-            <a href="/volcanosalmon" class="circle circle-lg tstbite-arrow">
+            <a href="/comingsoon" class="circle circle-lg tstbite-arrow">
               <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="13.333" viewBox="0 0 13.333 13.333">
                 <path d="M6.077,13.089a.833.833,0,0,1,0-1.178L10.488,7.5H.833a.833.833,0,0,1,0-1.667h9.655L6.077,1.423A.834.834,0,0,1,7.256.244l5.829,5.83a.833.833,0,0,1,0,1.186L7.256,13.089a.834.834,0,0,1-1.179,0Z" fill="#ff642f"/>
               </svg>
