--- a/faves.html
+++ b/faves.html
@@ -194,6 +194,8 @@
     </div>
   </div>
 </section>
+<section class="tstbite-section p-0">
+  <div class="container">
 <section class="tstbite-components my-4 my-md-5">
   <h5 class="py-3 mb-0">Favorite Spots</h5>
   <div class="row">
@@ -228,6 +230,9 @@
       </figure>
     </div>
   </div>
+  </section>
+  </div>
+  </section>
 
   <footer class="tstbite-footer pt-3 pt-md-5 mt-5 bg-lightest-gray">
     <div class="container">
