--- a/hazelnutoliveoilcake.html
+++ b/hazelnutoliveoilcake.html
@@ -176,7 +176,7 @@
                 </li>
                 <li>
                   <span>3</span>
-                  In a large bowl, beat the EVOO, eggs (or egg replacer), and sugar for 2 to 3 minutes on speed 7 of a handheld beater or until it becomes pale and thick (like pouring cream).
+                  In a large bowl, beat the EVOO, eggs (or egg replacer), and sugar for 2-3 minutes on speed 7 of a handheld beater or until it becomes pale and thick (like pouring cream).
                 </li>
                 <li>
                   <span>4</span>
