--- a/gfdfv.html
+++ b/gfdfv.html
@@ -155,6 +155,16 @@
             </figcaption>
           </figure>
         </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/hazelnutoliveoilcake" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/hazelnutoliveoilcake.png" class="w-100" alt="Hazelnut Olive Oil Cake">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/hazelnutoliveoilcake" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Hazelnut Olive Oil Cake</a>
+            </figcaption>
+          </figure>
+        </div>
       </div>
     </section>
   </div>
