--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
               </figure>
             </div>
             <div class="media-body">
-              <h5 class="f-size-24 inter-font font-weight-semibold">Emily L.</h5>
+              <h5 class="f-size-24 inter-font font-weight-semibold" style="margin-left: 20px">Emily L.</h5>
               <span>Recipe Curator</span>
             </div>
           </div>
