--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             </div>
             <div class="media-body">
               <h5 class="f-size-24 inter-font font-weight-semibold" style="margin-left: 20px">Emily L.</h5>
-              <span>Recipe Curator</span>
+              <span style="margin-left: 20px">Recipe Curator</span>
             </div>
           </div>
         </div>
