--- a/hazelnutoliveoilcake.html
+++ b/hazelnutoliveoilcake.html
@@ -129,7 +129,7 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">150g hazelnut flour (must use a scale because the volume of hazelnut meal varies depending on freshness which makes cups unreliable)</label>
+                  <label class="form-check-label" for="crackers">150g hazelnut flour (must use a scale because the volume of hazelnut flour varies depending on freshness which makes cups unreliable)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
@@ -172,7 +172,7 @@
                 </li>
                 <li>
                   <span>2</span>
-                  In a medium bowl, mix the hazelnut meal, baking soda, meyer lemon, and salt.
+                  In a medium bowl, mix the hazelnut flour, baking soda, meyer lemon, and salt.
                 </li>
                 <li>
                   <span>3</span>
