--- a/hazelnutoliveoilcake.html
+++ b/hazelnutoliveoilcake.html
@@ -191,12 +191,12 @@
                   Pour the batter into the prepared pan and bake for 45 minutes. It will puff up dramatically in the oven but it collapses as it cools.
                 </li>
                 <li>
-                  <span>6</span>
+                  <span>7</span>
                   Remove the cake from the oven and allow to fully cool in the pan before releasing from the springform pan. This is a rustic cake that has higher edges and a flatter centre (plenty of meringue-like edges and not an overwhelming amount of the rich brownie-like centre of the cake).
                 </li>
                 <li>
-                  <span>7 (optional)</span>
-                  Decorate the cake with toasted hazelnuts and dust with powdered sugar, if desired. Serve fully cool.
+                  <span>8</span>
+                  <i>Optional:</i> Decorate the cake with toasted hazelnuts and dust with powdered sugar, if desired. Serve fully cool.
                 </li>
               </ul>
             </div>
