--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="Pages">
                 <a class="dropdown-item" href="/bars">Bars</a>
-                <a class="dropdown-item" href="/breads">Breads</a>
+                <a class="dropdown-item" href="/breads">Bread</a>
                 <a class="dropdown-item" href="/cookies">Cookies</a>
                 <a class="dropdown-item" href="/gfdfv">GF, DF, V</a>
                 <a class="dropdown-item" href="/healthierdesserts">Healthier Desserts</a>
