--- a/sweet.html
+++ b/sweet.html
@@ -68,7 +68,7 @@
       </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Sweets</h5>
+      <h5 class="py-3 mb-0">Sweet</h5>
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
