--- a/newyorkres.html
+++ b/newyorkres.html
@@ -75,6 +75,9 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/maria.png" class="rounded-circle" >
             </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Maria Restaurant</a>
+            </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
@@ -82,6 +85,9 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/julianas.png" class="rounded-circle" >
             </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Juliana's Pizza</a>
+            </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
@@ -89,6 +95,9 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/zeroottonove.png" class="rounded-circle" >
             </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Zero Otto Nove</a>
+            </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
@@ -96,6 +105,9 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/bistrovendome.png" class="rounded-circle" >
             </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Bistro Vendôme</a>
+            </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
@@ -103,6 +115,9 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/cafechina.png" class="rounded-circle" >
             </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Café China</a>
+            </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
@@ -110,6 +125,9 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/oxomoco.png" class="rounded-circle" >
             </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Oxomoco</a>
+            </figcaption>
           </figure>
         </div>
       </div>
